# c23-102-webapp

./: .gitignore  README.md  TODELETE.json  db.sql  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  webpack.config.js
CRUD/: app.py
CRUD/templates/: editar_restaurante.html  index.html  nueva_categoria.html  nuevo_restaurante.html  registro.html
actions/: authActions.js  authActions.ts  cartasAction.ts  clientActions.ts  platosActions.ts  restaurantsActions.ts
app/: __init__.py  db.py  globals.css  layout.tsx  not-found.tsx  providers.tsx  schema.sql
app/(authentication)/: layout.tsx
app/(client-platform)/: layout.tsx
app/(platform)/: layout.tsx
app/(restaurant-platform)/: layout.tsx
app/(user-platform)/: layout.tsx
app/(website)/: layout.tsx  page.tsx
app/auth/: RegisterForm.py  __init__.py  login.py  register.py  register_form.py
app/dish/: __init__.py  (+2 more)
constants/: app_constants.ts  index.ts  routes.ts  takeAway-info.ts
context/: CartContext.tsx  ModalContext.tsx  ProductListModalContext.tsx  UserContext.js  UserContext.tsx
instance/: db.sqlite
public/: index.html
schemas/: authSchema.ts  newsletterSchema.ts  platosSchema.ts
src/: App.jsx  index.js
take_away/: app.db
templates/: categorias.html  editar_categoria.html  horarios.html  inicio_sesion.html
types/: BusinessTypes.ts  CartType.ts  CartaType.ts  ClientTypes.ts  Country.ts  PedidoType.ts  PlatoType.ts  RestaurantShortInfoType.ts  RestaurantTypes.ts  ReviewType.ts  User.ts  authTypes.ts  authentication.ts  websiteProps.ts
(+149 files in other folders)
