[project]
name = "app"
version = "0.0.1"
description = "Aplicación de delivery de comidas"
authors = [
    { name = "Victor", email = "victordanielayalasantacruz@gmail.com" }
]
dependencies = [
    "Flask>=3.1.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pylint>=3.3",
    "autopep8>=2.3",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
